[package]
name = "awid"
description = "Small, simple, universally unique identifiers."
repository = "https://github.com/Normantas/awid"
authors = ["Normantas"]
keywords = ["identifier", "id"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "bytes/serde"]

[dependencies]
rand_core = "0.6.4"
serde = { version = "1.0", optional = true, features = ["derive"] }
