[package]
name = "awid"
description = "Small, simple, universally unique identifiers."
repository = "https://github.com/Normantas/awid"
authors = ["Normantas"]
keywords = ["identifier", "id"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"
version = "1.0.0"
edition = "2021"

[features]
default = ["base32"]
base32 = ["dep:base32"]
serde = ["dep:serde"]
chrono = ["dep:chrono"]

[dependencies]
base32 = { version = "0.5.0", optional = true }
chrono = { version = "0.4.38", optional = true }
rand_core = "0.6.4"
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "1.0.61"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
